fix: доработать методы и добавить идентификаторы